--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Deploy to IIS using Web Deploy
       run: |
-        cmd /c ""C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe" ^
+        cmd /c """"C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"" ^
         -source:contentPath="." ^
-        -dest:auto,computerName="https://localhost:8172/msdeploy.axd?site=apsxWebDeploy",username='CONS',password='Cons.2324',authType='Basic' ^
+        -dest:auto,computerName=""https://localhost:8172/msdeploy.axd?site=apsxWebDeploy"",username='CONS',password='Cons.2324',authType='Basic' ^
         -allowUntrusted"
