--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy to IIS using Web Deploy
+      shell: cmd
       run: |
-        cmd /c """"C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe"" ^
+        "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe" ^
         -source:contentPath="." ^
-        -dest:auto,computerName=""https://localhost:8172/msdeploy.axd?site=apsxWebDeploy"",username='CONS',password='Cons.2324',authType='Basic' ^
-        -allowUntrusted"
+        -dest:auto,computerName="https://localhost:8172/msdeploy.axd?site=apsxWebDeploy",username='CONS',password='Cons.2324',authType='Basic' ^
+        -allowUntrusted
