--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,6 @@ jobs:
       run: |
         "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe" ^
         -verb:sync ^
-        -source:contentPath="." ^
+        -source:contentPath="C:\inetpub\wwwroot\aspxWebDeploy" ^
         -dest:auto,computerName="https://localhost:8172/msdeploy.axd?site=apsxWebDeploy",username='CONS',password='Cons.2324',authType='Basic' ^
         -allowUntrusted
