--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,5 +19,5 @@ jobs:
         "C:\Program Files (x86)\IIS\Microsoft Web Deploy V3\msdeploy.exe" ^
         -verb:sync ^
         -source:contentPath="C:\inetpub\wwwroot\aspx" ^
-        -dest:auto,computerName="https://WIN-C8DHJ5Q388I:8172/msdeploy.axd",username='CONS',password='Cons.1234',authType='Basic' ^
+        -dest:auto,computerName="https://win-c8dhj5q388i:8173/msdeploy.axd",username='CONS',password='Cons.1234',authType='Basic' ^
         -allowUntrusted
